deploy/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-testing-manager-ui-ingress
  namespace: test-e2e
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://e2e-testing-manager.itsf.io, https://keycloak.dev.epicmt.internal, https://iam.itsffr.internal"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
    - host: e2e-testing-manager.itsf.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e-testing-manager-ui
                port:
                  number: 8080
